cabal-version:       3.0
name:                hedron-archive
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/PPKFS/hedron-archive#hedron-archive) for more details.
homepage:            https://github.com/PPKFS/hedron-archive
bug-reports:         https://github.com/PPKFS/hedron-archive/issues
license:             MIT
license-file:        LICENSE
author:              Avery
maintainer:          Avery <thecommunistduck@hotmail.co.uk>
copyright:           2022 Avery
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/PPKFS/hedron-archive.git

common common-options
  build-depends:       base >= 4.15.1.0
                     , solitude
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , aeson
                     , time

  mixins:              base hiding (Prelude)
                     , solitude (Solitude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HedronArchive
  other-modules:       Table

executable hedron-archive
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hedron-archive
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hedron-archive-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hedron-archive
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
